blockml/test/valid/01_other/v3/v3_one.view
view: v3_one
table: 1

